--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Web Của Tôi</title>
-</head>
-<body>
-    <h1>Chào mừng đến với trang web của tôi!</h1>
-    <p>Đây là một trang web tĩnh được triển khai trên GitHub Pages.</p>
-</body>
-</html>
-
+<h1>Welcome to my GitHub Pages!</h1>
